# masiina

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml
compiler/: CMakeLists.txt
compiler/include/masiina/compiler/: config.hpp.in  instruction.hpp  io.hpp  module.hpp  symbol-map.hpp  unit.hpp
compiler/src/: compiler.cpp  instruction.cpp  io.cpp  main.cpp  module.cpp  symbol-map.cpp  unit.cpp
include/masiina/: macros.hpp  opcode.hpp  version.hpp
runtime/: CMakeLists.txt
runtime/include/masiina/runtime/: config.hpp.in  environment.hpp  io.hpp  module.hpp  parser.hpp  routine.hpp
runtime/src/: environment.cpp  io.cpp  main.cpp  module.cpp  parser.cpp  routine.cpp
